--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,8 +34,8 @@ a.active {
   background-color: gray;
 }
 .avatar{
-  width: 50%;
-  height: 50%;
+  width: 250px;
+  height: 250px;
   text-align: center;
   margin-left: 20%;
   margin-bottom: 0px;
